// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad language 1`] = `
Object {
  "language": "Incorrect value",
}
`;

exports[`should be invalid for empty name 1`] = `
Object {
  "name": "Value must be non-empty string",
}
`;

exports[`should be invalid for extra fields 1`] = `
Object {
  "foo": "Incorrect value",
}
`;
